Add basic payments page

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script type="text/javascript" src="https://js.squareup.com/v2/paymentform"></script>
     <title>Messenger</title>
   </head>
   <body>
-    <h1>React Boilerplate</h1>
+    <h1>Easy Absentee</h1>
     <div id="app"></div>
     <script src="/bundle.js"></script>
   </body>
