--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <script type="text/javascript" src="https://js.squareup.com/v2/paymentform"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Messenger</title>
   </head>
   <body>
