--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <script type="text/javascript" src="https://js.squareup.com/v2/paymentform"></script>
-    <title>Messenger</title>
+    <title>Easy Absentee</title>
   </head>
   <body>
-    <h1>Easy Absentee</h1>
     <div id="app"></div>
     <script src="/bundle.js"></script>
   </body>
