--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <script type="text/javascript" src="https://js.squareup.com/v2/paymentform"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <title>Messenger</title>
+    <title>Easy Absentee</title>
   </head>
   <body>
     <div id="app"></div>
