css style worked on columns

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
   <head>
     <script type="text/javascript" src="https://js.squareup.com/v2/paymentform"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+
     <title>Easy Absentee</title>
   </head>
   <body>
